--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@
 }
 
 .btn1{
+  display: flex;
   padding: 5px 12px;
   background: linear-gradient(45deg, #ff0099, #e624bf);
   color: white !important;
   font-weight:bold !important;
-  float: right;
   margin-bottom: 10px;
   margin-right: 10px;
   border: none;
